force-app/application/package/main/objects/Contact/fields/Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Company_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Company Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>