force-app/application/package/main/objects/Contact/fields/Email_Favourited_Notifications__c.field-meta.xml
<CustomField>
    <fullName>Email_Favourited_Notifications__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Toggle for email favourited notifications</description>
    <label>Email Favourited Notifications</label>
    <type>Checkbox</type>
</CustomField>