force-app/application/package/main/objects/Contact/fields/Email_Notifications__c.field-meta.xml
<CustomField>
    <fullName>Email_Notifications__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This used to turn On Off Notification email for my stories and favorited dovs</description>
    <label>Email  Notification</label>
    <type>Checkbox</type>
</CustomField>