force-app/application/package/main/objects/Contact/fields/Email_Saved_Story_Notification__c.field-meta.xml
<CustomField>
    <fullName>Email_Saved_Story_Notification__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Toggle Email Saved Story Notifications</description>
    <label>Email Saved Story Notification</label>
    <type>Checkbox</type>
</CustomField>