force-app/application/package/main/objects/Contact/fields/Import_Source__c.field-meta.xml
<CustomField>
    <fullName>Import_Source__c</fullName>
    <label>Import Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>IC Spreadsheet</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>