force-app/application/package/main/objects/Contact/fields/LanguagePreference__c.field-meta.xml
<CustomField>
    <fullName>LanguagePreference__c</fullName>
    <description>This is the contacts preferred language.</description>
    <label>Language Preference</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>en</fullName>
                <default>true</default>
                <label>English</label>
            </value>
            <value>
                <fullName>fr</fullName>
                <label>French</label>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
                <isActive>false</isActive>
                <label>Unknown</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>