force-app/application/package/main/objects/Contact/fields/Other_Salutation__c.field-meta.xml
<CustomField>
    <fullName>Other_Salutation__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Other Salutation</label>
    <length>40</length>
    <type>Text</type>
</CustomField>