force-app/application/package/main/objects/Contact/fields/Power_of_One__c.field-meta.xml
<CustomField>
    <fullName>Power_of_One__c</fullName>
    <description>For reporting purposes -&gt; https://success.salesforce.com/answers?id=9063000000048RbAAI</description>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Power of One</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>