force-app/application/package/main/objects/Contact/fields/Preferred_Contact_Method__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Contact_Method__c</fullName>
    <label>Preferred Contact Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Mobile Phone</fullName>
            </value>
            <value>
                <fullName>SMS</fullName>
                <label>Text (SMS)</label>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Secondary Email</fullName>
                <isActive>false</isActive>
                <label>Secondary Email</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>