force-app/application/package/main/objects/Contact/fields/Preferred_Pronoun__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Pronoun__c</fullName>
    <label>Preferred Pronoun</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>He</fullName>
                <label>He, Him, His</label>
            </value>
            <value>
                <fullName>She</fullName>
                <label>She, Her, Hers</label>
            </value>
            <value>
                <fullName>They</fullName>
                <label>They, Them, Theirs</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>