force-app/application/package/main/objects/Contact/fields/Privacy_Policy_Agreed__c.field-meta.xml
<CustomField>
    <fullName>Privacy_Policy_Agreed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Captures if contact has agreed to the privacy policy</description>
    <label>Privacy Policy Agreed</label>
    <type>Checkbox</type>
</CustomField>