force-app/application/package/main/objects/Contact/fields/Secondary_Phone__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Phone__c</fullName>
    <description>Secondary phone number</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Secondary Phone</label>
    <type>Phone</type>
</CustomField>